fix :fonctionnalite dette
