# app/Http/Controllers/DetteController.php
@@ -4,15 +4,76 @@ namespace App\Http\Controllers;
 
 use App\Models\Dette;
 use Illuminate\Http\Request;
+use App\Services\DetteService;
+use Illuminate\Http\JsonResponse;
 
+/**
+ * @OA\Tag(
+ *     name="Dette",
+ *     description="Operation relative aux dettes",
+ * )
+ */
 class DetteController extends Controller
 {
+
+    protected $detteService;
+    public function __construct(DetteService $detteService)
+    {
+        $this->detteService = $detteService;
+    }
     /**
      * Display a listing of the resource.
      */
-    public function index()
+
+   /**
+ * @OA\Get(
+ *     path="/dettes",
+ *     tags={"Dettes"},
+ *     summary="Get list of debts",
+ *     description="Returns a list of debts. Optionally filter by status (Solde, NonSolde)",
+ *     @OA\Parameter(
+ *         name="statut",
+ *         in="query",
+ *         description="Filter debts by status. Use 'Solde' for fully paid debts and 'NonSolde' for unpaid debts.",
+ *         required=false,
+ *         @OA\Schema(
+ *             type="string",
+ *             example="Solde|NonSolde"
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="List of debts retrieved successfully",
+ *         @OA\JsonContent(
+ *             type="array",
+ *             @OA\Items(ref="#/components/schemas/Dette")
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=400,
+ *         description="Bad request"
+ *     )
+ * )
+ */
+    public function index(Request $request):JsonResponse
     {
-        //
+        // Récupérer le paramètre 'statut' de la requête
+    $statut = $request->query('statut');
+    
+    // Vérifier si le paramètre 'statut' est passé
+    if ($statut) {
+        $statuts = explode('|', $statut);
+        $debts = $this->detteService->state($statuts); // Filtrer par statut
+    } else {
+        $debts = $this->detteService->all(); // Récupérer toutes les dettes
+    }
+
+    return response()->json([
+        'status' => 200,
+        'data' => $debts,
+        'message' => 'List of debts retrieved successfully'
+    ], 200);
+
     }
 
     /**
@@ -28,7 +89,7 @@ class DetteController extends Controller
      */
     public function store(Request $request)
     {
-        //
+
     }
 
     /**
@@ -36,7 +97,7 @@ class DetteController extends Controller
      */
     public function show(Dette $dette)
     {
-        //
+        
     }
 
     /**
@@ -62,4 +123,6 @@ class DetteController extends Controller
     {
         //
     }
+
+    
 }
