# storage/api-docs/api-docs.json
@@ -791,6 +791,46 @@
                     }
                 }
             }
+        },
+        "/dettes": {
+            "get": {
+                "tags": [
+                    "Dettes"
+                ],
+                "summary": "Get list of debts",
+                "description": "Returns a list of debts. Optionally filter by status (Solde, NonSolde)",
+                "operationId": "271cccc424ec9cadaf0baf93c11088ac",
+                "parameters": [
+                    {
+                        "name": "statut",
+                        "in": "query",
+                        "description": "Filter debts by status. Use 'Solde' for fully paid debts and 'NonSolde' for unpaid debts.",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "example": "Solde|NonSolde"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List of debts retrieved successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/Dette"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -938,6 +978,73 @@
                 },
                 "type": "object"
             },
+            "Dette": {
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "format": "int64",
+                        "example": 1
+                    },
+                    "date": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2024-01-01T00:00:00Z"
+                    },
+                    "montant": {
+                        "type": "number",
+                        "format": "float",
+                        "example": 29.99
+                    },
+                    "montantDu": {
+                        "type": "number",
+                        "format": "float",
+                        "example": 22.99
+                    },
+                    "montantRestant": {
+                        "type": "number",
+                        "format": "float",
+                        "example": 7.99
+                    },
+                    "client_id": {
+                        "type": "integer",
+                        "format": "int64",
+                        "example": 1
+                    },
+                    "article_details": {
+                        "type": "array",
+                        "items": {
+                            "properties": {
+                                "id": {
+                                    "type": "integer",
+                                    "format": "int64",
+                                    "example": 1
+                                },
+                                "article_id": {
+                                    "type": "integer",
+                                    "format": "int64",
+                                    "example": 1
+                                },
+                                "libelle": {
+                                    "type": "string",
+                                    "example": "Article Example"
+                                },
+                                "quantite": {
+                                    "type": "integer",
+                                    "format": "int64",
+                                    "example": 1
+                                },
+                                "prixVente": {
+                                    "type": "number",
+                                    "format": "float",
+                                    "example": 29.99
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                },
+                "type": "object"
+            },
             "User": {
                 "required": [
                     "nom",
@@ -990,6 +1097,10 @@
         {
             "name": "Clients",
             "description": "Clients"
+        },
+        {
+            "name": "Dettes",
+            "description": "Dettes"
         }
     ],
     "security": [
